# tcc-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/core/: models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/core/utils/: exportador.py  mapa_braille.py  processar_imagem.py  tradutor_texto.py
src/project/: settings.py  urls.py
