[project]
name = "tcc-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexsandroCosta",email = "alexsandro.costasv@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "reportlab (>=4.4.2,<5.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
]

packages = [{include = "project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
